tests/src/frontend/syntax/invalid/mutable_tuple.sk
fun main(): void {
  _t: (Int, mutable Int) = (0, 1);
  print_raw("fail")
}
